added about page, replaced jwt to session cookies + csrf security, improved mobile posts view and scrolling feature (infinite scrolling) for users and tags